--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "author": "Carlos Souza <carloshrsouza@gmail.com> (http://csouza.me/)",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "angular": "^1.6.9"
+  },
   "devDependencies": {
     "babel-core": "^6.2.1",
     "babel-preset-es2015": "^6.1.18",
