--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Carlos Souza <carloshrsouza@gmail.com> (http://csouza.me/)",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.6.9"
+    "angular": "^1.6.9",
+    "express": "^4.16.3"
   },
   "devDependencies": {
     "babel-core": "^6.2.1",
