--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.6.9",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mongodb": "^3.0.5"
   },
   "devDependencies": {
     "babel-core": "^6.2.1",
