--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.6.9",
+    "angular-ui-router": "^1.0.3",
     "express": "^4.16.3",
     "mongodb": "^3.0.5"
   },
