--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.6.9",
-    "angular-ui-router": "^1.0.3",
+    "@uirouter/angularjs": "latest",
     "express": "^4.16.3",
     "mongodb": "^3.0.5"
   },
