--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "gulp watch --gulpfile client/gulpfile.babel.js"
   },
-  "author": "Carlos Souza <carloshrsouza@gmail.com> (http://csouza.me/)",
+  "author": "Joabe Costa <joabetc@gmail.com> (http://csouza.me/)",
   "license": "ISC",
   "dependencies": {
     "angular": "^1.6.9",
